--- a/styles/style.css
+++ b/styles/style.css
@@ -31,7 +31,7 @@ a {
     text-decoration: none;
 }
 
-nav span {
+nav a {
     color: #7b1b1d;
     font-family: "Raleway", sans-serif;
     font-size: 27px;
@@ -44,7 +44,7 @@ nav span {
     transition-duration: 0.7s;
 }
 
-nav span:hover {
+nav a:hover {
     background-color: #7b1b1d;
     color: white;
 }
